--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<script type="text/template" id="item-template">
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-				<label><%- title %></label>
+				<label><%- title %><%= completed ? '--done' : '' %></label>
 				<span>--done</span>
 				<button class="destroy"></button>
 			</div>
